# partensor-toolbox

./: .gitignore  CMakeLists.txt  README.md
cmake/include/: ConfigBoost.cmake  ConfigGoogleLibs.cmake  ConfigMPI.cmake  ConfigTBB.cmake
documentation/html/: AlsOptionsPage.html  ChaptersPage.html  CompletionPage.html  Config_8hpp.html  Config_8hpp_source.html  Constants_8hpp.html  Constants_8hpp.js  Constants_8hpp_source.html  CpdDimTreeMpi_8hpp.html  CpdDimTreeMpi_8hpp_source.html  CpdDimTreePage.html  CpdDimTree_8hpp.html  CpdDimTree_8hpp.js  CpdDimTree_8hpp_source.html  CpdMpi_8hpp.html  CpdMpi_8hpp_source.html  CpdOpenMP_8hpp.html  CpdOpenMP_8hpp_source.html  CpdPage.html  Cpd_8hpp.html  Cpd_8hpp.js  Cpd_8hpp_source.html  CwiseProdPage.html  CwiseProd_8hpp.html  CwiseProd_8hpp.js  CwiseProd_8hpp_source.html  DataGenerationPage.html  DataGeneration_8hpp.html  DataGeneration_8hpp.js  DataGeneration_8hpp_source.html  DimTrees_8hpp.html  DimTrees_8hpp.js  DimTrees_8hpp_source.html  FactorizationPage.html  GettingStartedPage.html  GtcMpi_8hpp.html  GtcMpi_8hpp_source.html  GtcOpenMP_8hpp.html  GtcOpenMP_8hpp_source.html  GtcOptionsPage.html  (+258 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+62 more)
include/: Config.hpp  Constants.hpp  Cpd.hpp  CpdDimTree.hpp  CpdDimTreeMpi.hpp  CpdMpi.hpp  CpdOpenMP.hpp  CwiseProd.hpp  DataGeneration.hpp  DimTrees.hpp  Gtc.hpp  GtcMpi.hpp  GtcOpenMP.hpp  GtcStochastic.hpp  GtcStochasticMpi.hpp  GtcStochasticOpenMP.hpp  KhatriRao.hpp  Kronecker.hpp  MTTKRP.hpp  Matricization.hpp  NesterovMNLS.hpp  Normalize.hpp  PARTENSOR.hpp  PARTENSOR_basic.hpp  ParallelWrapper.hpp  PartialCwiseProd.hpp  PartialKhatriRao.hpp  PrintInfo.hpp  ReadWrite.hpp  Tensor.hpp  TensorOperations.hpp  TerminationConditions.hpp  Timers.hpp  execution.hpp
include/CUDA/: CUDAMTTKRP.hpp  CpdCUDA.hpp  add_vectors.cu  add_vectors.hpp
include/FMRI/: compute_grid_dimensions.cpp  compute_svd.cpp  create_data.cpp  create_grid.cpp  dis_count.cpp  g_lambda.cpp  get_objective_value.cpp  get_objective_value_accel.cpp  line_search_accel.cpp  makefile  nesterov_matrix_nnls.cpp  normalize.cpp  ntf  ntf_functions.h  ntf_mpi_eigen.cpp  read_data.cpp  read_from_file.cpp  set_info.cpp  update_A_n_Z_factors.cpp  update_S_factor.cpp  update_alpha.cpp
test/: CMakeLists.txt  QuickStart_example.cpp  cpd.cpp  cpd_dimtrees.cpp  cpd_dimtrees_factorsinit.cpp  cpd_dimtrees_factorsinit_file.cpp  cpd_dimtrees_file.cpp  cpd_dimtrees_full.cpp  cpd_dimtrees_full_file.cpp  cpd_dimtrees_mpi.cpp  cpd_dimtrees_mpi_factorsinit.cpp  cpd_dimtrees_mpi_factorsinit_file.cpp  cpd_dimtrees_mpi_file.cpp  cpd_dimtrees_mpi_full.cpp  cpd_dimtrees_mpi_full_file.cpp  cpd_dimtrees_mpi_options.cpp  cpd_dimtrees_mpi_options_file.cpp  cpd_dimtrees_options.cpp  cpd_dimtrees_options_file.cpp  cpd_factorsinit.cpp  cpd_factorsinit_file.cpp  cpd_file.cpp  cpd_full.cpp  cpd_full_file.cpp  cpd_gen.cpp  cpd_mpi.cpp  cpd_mpi_factorsinit.cpp  cpd_mpi_factorsinit_file.cpp  cpd_mpi_file.cpp  cpd_mpi_full.cpp  cpd_mpi_full_file.cpp  cpd_mpi_options.cpp  cpd_mpi_options_file.cpp  cpd_omp.cpp  cpd_omp_factorsinit.cpp  cpd_omp_factorsinit_file.cpp  cpd_omp_file.cpp  cpd_omp_full.cpp  cpd_omp_full_file.cpp  cpd_omp_options.cpp  (+27 more)
test/CPD_CUDA/: cpd_cuda.cpp  cpd_cuda_file.cpp  cpd_cuda_full_file.cpp  run.sh  test_batched_mttkrp.cpp  test_mttkrp.cpp
utils/: plot_cost_function.py
